[package]
name = "rustom"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7.5", features = ["macros"] }
async-trait = "0.1"
sqlx = { version = "0.8.0", default-features = false, features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
argon2 = "0.5"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = "0.15"
lapin = "2.5"
futures-util = "0.3"
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum", "reqwest"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.5"
serde_yaml = "0.9"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
subtle = "2.6"

[dev-dependencies]
mockall = "0.12"

